# speech-chatbot

./: .gitignore  Dockerfile  README.md  entrypoint.sh  main.py  notebook.ipynb  pyproject.toml
.github/workflows/: docker-build.yaml
notebook/: notebook.ipynb  part1.ipynb
notebooks/: chatbot1.ipynb  chatbot2.ipynb  part1.ipynb  part2.ipynb
src/: main.py  utils.py
