[project]
name = "thirdapp"
version = "0.1.0"
description = "A Serviceless Voice-To-Text Chat App"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain-core>=0.3.21",
    "langchain-groq>=0.2.1",
    "pyht>=0.1.8",
    "streamlit>=1.40.2",
    "google-cloud-texttospeech==2.22.0",
    "google-cloud-speech==2.29.0",
    "google-cloud-translate==3.19.0"
]
